# codex

./: .dockerignore  .env.example  .gitignore  .mise.toml  .sops.yaml  AGENTS.md  AGENT_SYSTEM.md  ANALYSIS-info-hierarchy.md  AUTHENTICATION.md  BUILD_COMPLETE.md  CHANGES_SUMMARY.md  CLAUDE.md  DATABASE_ARCHITECTURE.md  DOCKER.md  Dockerfile  Dockerfile.frontend  GIT_HOOKS.md  HIERARCHY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LINK_UNFURL_IMPLEMENTATION.md  MARKDOWN_PLUGIN_SYSTEM.md  MARKDOWN_STORAGE.md  MIGRATION_STATUS.md  Makefile  OPENGRAPH_FALLBACK.md  PERFORMANCE_IMPROVEMENTS.md  PLUGIN_HIERARCHY_FLIP_SUMMARY.md  README.md  SEARCH_FOLDERS_REFACTOR_SUMMARY.md  STRUCTURE.md  SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_CREDENTIALS.md  Tiltfile  VIEWS_TO_PLUGINS.md  agents.md  build.sh  demo_link_unfurl.py  demo_opengraph_fallback.py  docker-compose.dev.yml  (+12 more)
backend/: =4.0.0  Dockerfile  README.md  __init__.py  alembic.ini  database.py  main.py  models.py  notebook_alembic.ini  pyproject.toml  requirements.txt  schemas.py  test_logging_fix.py
backend/alembic/: env.py
backend/alembic/versions/: 20250123_000000_001_initial_system_schema.py
backend/api/: auth.py  main.py  schemas.py  utils.py
backend/api/routes/: artifacts.py  auth.py  entries.py  files.py  icloud.py  integration_variables.py  markdown.py  notebooks.py  pages.py  query.py  search.py  tasks.py  users.py  workspace.py  workspaces.py
backend/cli/: main.py  markdown_cli.py
backend/cli/commands/: config.py  daily_note.py  db.py  entry.py  hooks.py  notebook.py  page.py
backend/codex/: main.py
backend/codex/agents/: __init__.py  crypto.py  engine.py  provider.py  scope.py  tools.py  watchdog.py
backend/codex/alembic/: env.py
backend/codex/api/: __init__.py  auth.py  dependencies.py  main.py  schemas.py  schemas_agent.py
backend/codex/api/routes/: __init__.py  (+28 more)
backend/codex/cli/: main.py
backend/codex/core/: blocks.py  custom_blocks.py  entry.py  event_publisher.py  event_worker.py  git_batcher.py  git_hooks.py  git_lock_manager.py  git_manager.py  google_calendar.py  import_worker.py  invokeai.py  link_resolver.py  logging.py  mac_windows.py  markdown_renderers.py  md_import.py  metadata.py  oauth.py  permissions.py  property_validator.py  queue_worker.py  s3_storage.py  vectorizer.py  watcher.py  websocket.py
backend/codex/db/: database.py  migrations.py
backend/codex/holdem/: agents.py
backend/codex/notebook_alembic/: env.py
backend/codex/plugins/: __init__.py  dependencies.py  dynamo_registry.py  executor.py  loader.py  models.py  opengraph_scraper.py  registry.py  s3_client.py  service_client.py  version.py
backend/codex/scripts/: README.md  api_tester.py  holdem_agents.py  register_plugins.py  reindex_embeddings.py  run_migrations.sh  seed_test_data.py  take_screenshots.py  user_manager.py
backend/codex/templates/: daily-journal.yaml  photo-gallery.yaml  task-board.yaml  task-list.yaml  todo-item.yaml
backend/codex/worker/: __init__.py  context.py  settings.py  tasks.py
backend/core/: __init__.py  entry.py  folder_config.py  git_hooks.py  git_manager.py  icloud_manager.py  logging_config.py  markdown.py  markdown_indexer.py  markdown_renderers.py  markdown_storage.py  metadata.py  notebook.py  page.py  property_validator.py  sandbox.py  watcher.py  workspace.py
backend/db/: __init__.py  core_models.py  core_operations.py  crud_mixin.py  database.py  migrations.py  models.py  notebook_models.py  notebook_operations.py  operations.py  workspace_models.py  workspace_operations.py
backend/db/migrations/: add_notebooks_to_system_db.py  add_theme_setting.py  env.py
backend/db/models/: notebook.py
backend/db/system_migrations/: README.md  add_theme_setting.py
backend/integrations/: __init__.py  api_call.py  base.py  comfyui.py  database_query.py  graphql.py  registry.py
backend/mcp_server/: README.md  __init__.py  __main__.py  server.py
backend/notebook_alembic/versions/: 20250123_000001_002_rename_frontmatter_to_properties.py
backend/notebooks/: test.md
backend/plugins/: README.md
backend/plugins/api-fetch/: manifest.yml
backend/plugins/database-query/: manifest.yml
backend/plugins/github/: manifest.yml
backend/plugins/notebook-theme/: manifest.yml
backend/routers/: images.py  tags.py
backend/scripts/: README.md  run_migrations.sh  seed_test_data.py  take_screenshots.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_core.py  test_custom_blocks.py  test_db_crud.py  test_delete_endpoints.py  test_deprecated_routes.py  test_dynamo_registry.py  test_executor.py  test_file_content_upload.py  test_file_creation.py  test_file_operation_queue.py  test_files_api.py  test_folder_config.py  test_folders_api.py  test_frontmatter_stripping.py  test_generate_unique_path.py  test_git_hooks.py  test_git_lock.py  test_github_integration.py  test_holdem_agents.py  test_image_watcher.py  test_integration.py  test_integration_plugins.py  test_integrations_api.py  test_invokeai_metadata.py  test_link_unfurl.py  test_markdown.py  test_markdown_api.py  test_markdown_indexer.py  test_markdown_renderers.py  test_markdown_storage.py  test_metadata.py  test_migrations.py  test_notebook_migrations.py  test_notebooks_api.py  test_oauth.py  test_opengraph_scraper.py  (+33 more)
backend/tests/integration/: __init__.py  conftest.py  test_plugin_docker.py
backend/utils/: scanner.py  tfidf.py
plugin-service/: Dockerfile  pyproject.toml
plugin-service/api/: main.py
plugin-service/codex_plugin_service/: __init__.py  catalog.py  main.py
plugin-service/plugins/: .gitignore  build.ts  plugins.json
plugin-service/plugins/antiquarian/: manifest.yml
plugin-service/plugins/chart-example/: package.json
plugin-service/plugins/core/: README.md  manifest.yml
plugin-service/plugins/corkboard/: README.md
plugin-service/plugins/github/: README.md  manifest.yml
plugin-service/plugins/manila/: manifest.yml
plugin-service/plugins/rollup/: README.md
plugin-service/plugins/shared/: integrationClient.ts
plugin-service/tests/: test_catalog.py  test_service_api.py
(+550 files in other folders)
