[project]
name = "codex"
version = "2026.02.20.5ce96fb"
description = "A hierarchical digital laboratory journal system for tracking experiments, iterations, and investigations"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jeffrey Melloy", email = "jmelloy@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.0",
    "alembic>=1.13.0",
    "watchdog>=5.0.0",
    "gitpython>=3.1.43",
    "python-frontmatter>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "pyyaml>=6.0.3",
    "python-ulid[pydantic]>=3.1.0",
    "pillow-heif>=1.1.1",
    "httpx>=0.27.0",
    "litellm>=1.30.0",
    "cryptography>=42.0.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
