[project]
name = "codex"
version = "2026.02.20"
description = "A hierarchical digital laboratory journal system for tracking experiments, iterations, and investigations"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jeffrey Melloy", email = "jmelloy@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.13.3",
    "pydantic[email]>=2.13.3",
    "alembic>=1.13.0",
    "watchdog>=5.0.0",
    "gitpython>=3.1.43",
    "python-frontmatter>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosqlite>=0.22.1",
    "pyyaml>=6.0.3",
    "python-ulid[pydantic]>=3.1.0",
    "pillow-heif>=1.1.1",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "google-auth>=2.52.0",
    "google-auth-oauthlib>=1.3.1",
    "google-api-python-client>=2.196.0",
    "boto3>=1.34.0",
    "mistune>=3.0.0",
    "sqlite-vec>=0.1.9",
    "numpy>=2.4.6",
    "arq>=0.26.0",
    "redis[hiredis]>=8.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.20.2",
    "greenlet>=3.5.3",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
